# golang/docs/swagger.json
@@ -4,7 +4,180 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/account/": {
+        "/account/": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Returns user information based on their ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "Retrieve user by ID",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Account"
+                        }
+                    },
+                    "404": {
+                        "description": "This user wasn`t found.",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    },
+                    "500": {
+                        "description": "Something going wrong...",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    }
+                }
+            }
+        },
+        "/account/auth/login": {
+            "post": {
+                "description": "Logs in a user with email and password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Log in a user",
+                "parameters": [
+                    {
+                        "description": "Login information",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Access token",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Token"
+                        }
+                    },
+                    "400": {
+                        "description": "Incorrect data",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    },
+                    "401": {
+                        "description": "Incorrect email or password",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    },
+                    "404": {
+                        "description": "This user wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    },
+                    "500": {
+                        "description": "Something going wrong...",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    }
+                }
+            }
+        },
+        "/account/auth/logout": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Logs out a user by invalidating the session",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Log out a user",
+                "responses": {
+                    "200": {
+                        "description": "Logout success.",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Message"
+                        }
+                    },
+                    "500": {
+                        "description": "Something going wrong...",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    }
+                }
+            }
+        },
+        "/account/auth/refresh": {
+            "get": {
+                "description": "Refreshes the user's tokens using the refresh token from the cookie",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Refresh user tokens",
+                "responses": {
+                    "200": {
+                        "description": "Refresh token",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Token"
+                        }
+                    },
+                    "401": {
+                        "description": "Token is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    },
+                    "404": {
+                        "description": "Your token wasn't found., This user wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    },
+                    "500": {
+                        "description": "Something going wrong...",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JsonError"
+                        }
+                    }
+                }
+            }
+        },
+        "/account/delete": {
             "delete": {
                 "description": "Deletes a user account by ID.",
                 "consumes": [
@@ -18,13 +191,6 @@
                 ],
                 "summary": "Delete user account",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "description": "Delete User Request",
                         "name": "body",
@@ -49,51 +215,13 @@
                         }
                     },
                     "401": {
-                        "description": "Token is not bearer",
+                        "description": "Authorization header wasn`t found, Token is not bearer",
                         "schema": {
                             "$ref": "#/definitions/dto.JsonError"
                         }
                     },
                     "403": {
                         "description": "This resource is forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/account/account": {
-            "get": {
-                "description": "Returns user information based on their ID.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "account"
-                ],
-                "summary": "Retrieve user by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful response",
-                        "schema": {
-                            "$ref": "#/definitions/dto.Account"
-                        }
-                    },
-                    "404": {
-                        "description": "This user wasn`t found.",
                         "schema": {
                             "$ref": "#/definitions/dto.JsonError"
                         }
@@ -107,8 +235,13 @@
                 }
             }
         },
-        "/api/v1/account/edit": {
+        "/account/edit": {
             "patch": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Updates the user's information including password.",
                 "consumes": [
                     "application/json"
@@ -121,13 +254,6 @@
                 ],
                 "summary": "Update user information",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "description": "User update data",
                         "name": "body",
@@ -146,13 +272,13 @@
                         }
                     },
                     "400": {
-                        "description": "Your activation code is wrong.",
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/dto.JsonError"
                         }
                     },
                     "401": {
-                        "description": "Token is not bearer",
+                        "description": "Authorization header wasn't found, Token is not bearer",
                         "schema": {
                             "$ref": "#/definitions/dto.JsonError"
                         }
@@ -184,7 +310,7 @@
                 }
             }
         },
-        "/api/v1/account/new": {
+        "/account/new": {
             "post": {
                 "description": "Creates a new user and returns access tokens.",
                 "consumes": [
@@ -242,8 +368,13 @@
                 }
             }
         },
-        "/api/v1/account/verify/confirm/{code}": {
+        "/account/verify/confirm/{code}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Verifies the provided activation code for the user.",
                 "consumes": [
                     "application/json"
@@ -256,13 +387,6 @@
                 ],
                 "summary": "Verify user activation code",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "maxLength": 50,
                         "minLength": 8,
@@ -281,13 +405,13 @@
                         }
                     },
                     "400": {
-                        "description": "Bad string length",
+                        "description": "Your activation code is wrong., Bad string length",
                         "schema": {
                             "$ref": "#/definitions/dto.JsonError"
                         }
                     },
                     "401": {
-                        "description": "Token is not bearer",
+                        "description": "Authorization header wasn`t found, Token is not bearer",
                         "schema": {
                             "$ref": "#/definitions/dto.JsonError"
                         }
@@ -313,8 +437,13 @@
                 }
             }
         },
-        "/api/v1/account/verify/resend": {
+        "/account/verify/resend": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Resends a verification code to the user's email or phone number.",
                 "consumes": [
                     "application/json"
@@ -326,15 +455,6 @@
                     "account"
                 ],
                 "summary": "Resend verification code",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Ok.",
@@ -349,7 +469,7 @@
                         }
                     },
                     "401": {
-                        "description": "Authorization header wasn`t found",
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/dto.JsonError"
                         }
@@ -436,6 +556,23 @@
             "properties": {
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.Login": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 8
                 }
             }
         },
